# cowork

./: .cowork  .gitignore  AGENTS.md  DEVLOG.md  LICENSE  README.md  USAGE.md  WORKLOG.md  cowork.py  pyproject.toml
docs/: ARCHITECTURE.md  PLAN.md
docs/guides/: python-packaging.md
docs/manual-tests/: README.md  portable-identity.md
