[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cowork"
version = "0.1.0"
description = "Registro de sesiones de trabajo humano + IA, 100% local y sin dependencias."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Rubén Orozco", email = "drincast@gmail.com" }]
keywords = ["worklog", "time-tracking", "sessions", "cli", "sqlite"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/drincast/cowork"
Repository = "https://github.com/drincast/cowork"

# El comando `cowork` ejecuta la funcion main() del modulo cowork.py.
# Esto reemplaza a los lanzadores de bin/ cuando se instala con pipx/pip.
[project.scripts]
cowork = "cowork:main"

# El proyecto es un unico archivo (cowork.py), no un paquete con carpetas.
[tool.setuptools]
py-modules = ["cowork"]
